--- a/xtreaming-box/src/components/Main/Body.css
+++ b/xtreaming-box/src/components/Main/Body.css
@@ -17,8 +17,8 @@ body * {
 }
 
 .main{   
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     background-image: url("../../assets/imgs/img-fundo.jpg");
