--- a/xtreaming-box/src/components/MenuSuperior/MenuSuperior.css
+++ b/xtreaming-box/src/components/MenuSuperior/MenuSuperior.css
@@ -2,7 +2,7 @@
 
 .menu-superior{
     width: 100%;
-    height: 12vh;
+    height: 12%;
     background-color: black;
     white-space: nowrap;
     display: flex;
