--- a/xtreaming-box/src/pages/paginas_Externas/login/style.css
+++ b/xtreaming-box/src/pages/paginas_Externas/login/style.css
@@ -19,7 +19,7 @@ body * {
     justify-content: center;
     align-items: center;
     flex-direction: column; 
-    background-image: url("../../assets/imgs/img-fundo.jpg");
+    background-image: url("../../../assets/imgs/img-fundo.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -34,8 +34,8 @@ body * {
 }
 
 .logo-img {
-    width: 25vw;
-    margin: 3% 0 0 3%;
+    width: 22vw;
+    margin: 2% 0 0 2%;
 }
 
 .sessao-inferior {
@@ -48,13 +48,13 @@ body * {
 }
 
 .card-login  {
-    width: 40%;
-    height: 480px;
+    width: 35%;
+    height: 450px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 30px 35px;
+    padding: 25px 30px;
     background: #1F1B2C;
     border-radius: 20px;
     box-shadow: 0px 10px 40px #00000056;
@@ -63,6 +63,9 @@ body * {
 .card-login > h1{
     color: #16FC92;
     font-weight: 800;
+    margin-block-start: 0.27em;
+    margin-block-end: 0.15em;
+
 }
 
 .textfield {
@@ -124,34 +127,36 @@ body * {
 }
 
 .cardlogin-botoes-inferiores{
-    font-size: 16px;
+    
     width: 100%;
     height: 100%;
     align-items: center;
     display: inline-flex;
     flex-direction: row;
     box-sizing: border-box;
-    text-align: center;
+    justify-content: center;
 }
 
 .cardlogin-botoes-inferiores > label{
+    font-size: 10px;
     display: flex;
     align-items: center;
     flex-direction: row; 
     color: #f0ffffde;
     font-weight: 600;
-    
+    margin-right: 12%;
 }
 
-.checkbox {
-    margin-left: 10%;
+.manterconectado{
+    cursor: pointer;
 }
 
 .btn-esquecisenha{
-    margin-left: 25%;
+    font-size: 9px;
+    margin-left: 12%;
     color: #f0ffffde;
     margin-bottom: 5px;
-    font-weight: 800;
+    font-weight: 600;
     background-color: transparent;
     border: none;
     text-decoration: underline;
