Implementando router-dom
Implementado na pagina inicial e login

--- a/xtreaming-box/src/pages/paginas_Externas/paginaInicial/style.css
+++ b/xtreaming-box/src/pages/paginas_Externas/paginaInicial/style.css
@@ -1,8 +1,9 @@
+/*Aqui começa todos os istens da página*/
+
 .sessao-superior {
     width: 100%;
     height: 25%;
     display: flex;
-
 }
 
 .logo-img {
