--- a/xtreaming-box/src/components/MenuSuperior/MenuSuperiorMobile.css
+++ b/xtreaming-box/src/components/MenuSuperior/MenuSuperiorMobile.css
@@ -12,7 +12,7 @@
 
     .img-esquerda{
         width: 100%;
-        justify-content: left;
+        justify-content: center;
         padding: 15px 0 0 15px;
     }
 
