--- a/xtreamingbox/src/pages/paginas_Externas/cadastreSe/stylecadastreSe.css
+++ b/xtreamingbox/src/pages/paginas_Externas/cadastreSe/stylecadastreSe.css
@@ -66,7 +66,7 @@
     margin: 0 3% 0 0;
 }
 
-.conect > a {
+.conect > Link {
     font-family: 'Baloo Thambi 2', cursive;
     font-style: normal;
     font-weight: 400;
