--- a/xtreaming-box/src/pages/paginas_Externas/cadastreSe/stylecadastreSe.css
+++ b/xtreaming-box/src/pages/paginas_Externas/cadastreSe/stylecadastreSe.css
@@ -66,7 +66,9 @@
     margin: 0 3% 0 0;
 }
 
-.conect > Link {
+.conecte_se {
+    text-decoration: none;
+    text-decoration: underline;
     font-family: 'Baloo Thambi 2', cursive;
     font-style: normal;
     font-weight: 400;
