--- a/xtreaming-box/src/pages/paginas_Externas/contato/styleContato.css
+++ b/xtreaming-box/src/pages/paginas_Externas/contato/styleContato.css
@@ -16,9 +16,9 @@
     height: 15%;
 }
 
-.text-botoes-contato > div{
+.text-botoes-contato{
     width: 100%;
-    height: 50%;
+    height: 15vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -28,6 +28,9 @@
     font-family: 'Graduate';
     color: #FFFFFF;
     font-size: 26px;
+    margin: 1%;
+    align-items: center;
+    justify-content: center;
 }
 
 .title2{
