--- a/xtreaming-box/src/pages/paginas_Externas/paginaInicial/stylePaginaInicial.css
+++ b/xtreaming-box/src/pages/paginas_Externas/paginaInicial/stylePaginaInicial.css
@@ -5,7 +5,17 @@
     width: 100%;
     height: 25%;
     display: flex;
+    align-items: center ;
 
+}
+.menu-superior-inicial{
+    width: 100%;
+    height: 9%;
+    background-color: black;
+    white-space: nowrap;
+    display: flex;
+    flex-direction: row;
+    margin: 0;
 }
 
 .logo-img {
@@ -13,7 +23,20 @@
     position: absolute;
     width: 25vw;
     left: 3%;
-    top: 5%;
+    margin-top: 1%;
+    align-items: center;
+}
+
+.text-direita-faleconosco{
+    color: white;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    font-family: 'Graduate', cursive;
+    font-size: 15px;
+    margin-right: 2%;  
 }
 
 .sessao-inferior-paginicial {
@@ -36,7 +59,7 @@
 .texto1 {
     width: 100%;
     padding-left: 5%;
-    padding-top: 4%;
+    padding-top: 1%;
     font-family: 'Graduate';
     font-style: normal;
     font-weight: 400;
