--- a/xtreaming-box/src/pages/paginas_Externas/contato/styleContato.css
+++ b/xtreaming-box/src/pages/paginas_Externas/contato/styleContato.css
@@ -96,13 +96,20 @@
 .Enviar {
     background-color: #16FC92;
 }
-
+.boton > div{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
 
 .btn:link,
 .btn:visited {
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 40px;
+    padding: 5px 5px;
     display: inline-block;
     border-radius: 100px;
     transition: all .2s;
@@ -120,6 +127,11 @@
 }
 
 .btn-white {
+    font-size: medium;
+    text-align: center;
+    border-radius: 25px;
+    width: 160px;
+    height: 35px;
     background-color: #16FC92;
     color: #0a0000;
     font-family: 'Baloo Thambi 2', cursive;
@@ -155,7 +167,7 @@
 @keyframes moveInBottom {
     0% {
         opacity: 0;
-        transform: translateY(30px);
+        transform: translateY(20px);
     }
 
     100% {
