--- a/xtreaming-box/src/components/MenuSuperior/MenuSuperior.css
+++ b/xtreaming-box/src/components/MenuSuperior/MenuSuperior.css
@@ -118,7 +118,7 @@
 }
 
 .dropdown-content {
-
+    cursor: pointer;
     background-color: #f1f1f1;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
