--- a/xtreaming-box/src/pages/paginas_Externas/login/styleLoginMobile.css
+++ b/xtreaming-box/src/pages/paginas_Externas/login/styleLoginMobile.css
@@ -58,6 +58,9 @@
         height: 8%;
         margin: 10px;
         font-size: 8pt;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .cardlogin-botoes-inferiores{
