--- a/xtreaming-box/src/pages/paginas_Internas/meuPerfil/styleMeuPerfil.css
+++ b/xtreaming-box/src/pages/paginas_Internas/meuPerfil/styleMeuPerfil.css
@@ -69,6 +69,12 @@
     display: flex;
 }
 
+.aviso{
+    color: white;
+    font-weight: 900;
+    margin-left: 5%;
+    font-size: 20px;
+}
 
 .bt1Editar {
     text-align: center;
