--- a/xtreaming-box/src/components/TabelasAdm/Serie/styletabelaSerie.css
+++ b/xtreaming-box/src/components/TabelasAdm/Serie/styletabelaSerie.css
@@ -1,52 +1,42 @@
-
-.total-ser > .cabec-graf-ser .container-graf-ser{
-    display: flex;
-    flex-direction: column;
-    width: 45%;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-}
-.cabec-graf-ser{
-    display: flex;
-    flex-direction: row;
-    width: 45%;
-    height: 40px;
-    background-color: #514769;
-    border: 1px solid  #16FC92;
-    border-start-start-radius: 20px;
-    
-    
-}
-
-
 .container-graf-ser{
-    display: flex;
+    display: block;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
     top: 2%;
-    width: 45%;
-    height: 80%;
+    width: 50%;
+    height: 45vh;
     background-color: white;
     border-radius: 20px;
     overflow-y: auto;
     background-color: hsla(0, 24%, 15%, 0.61);
+    margin-left: 30px;
 
-}  
+
+}
+.cabec-graf-ser{
+    display: flex;
+    flex-direction: row;
+    height: 40px;
+    background-color: #514769;
+    border: 1px solid  #16FC92;
+    
+    
+    
+}
 
 .nome-h3-ser {
     padding-top: 1%;
-    display: flex;
-
-    justify-content: center;
-    align-items: center;
     font-family: 'Baloo 2',cursive;
     color: #16FC92;
     font-weight: 600;
     font-size: 24px;
+    margin: 0%;
+    margin-bottom: 13px;
+    text-align: center;
+    text-justify: center;
     
 }
-.corpo-graf{
+.corpo-graf-ser{
     
     display: flex;
     flex-direction: row;
@@ -54,10 +44,12 @@
     height: auto;
     
 }   
-.col1 {
+.col-tit-ser {
+    position:absolute;
     display: flex;
     color: white;
-    width: 10%;
+    width: 70px;
+    height: 40px;
     border: 1px solid  #16FC92;
     align-items: center;
     justify-content: center;
@@ -67,21 +59,23 @@
      
 }
 
-.col1-1 {
+.col-inf-cod{
+    position:absolute;
     display: flex;
     color: white;
-    width: 10%;
-    height: 25px;
+    width: 7px;
+    height: 40px;
     border: 1px solid  #16FC92;
     align-items: center;
     justify-content: center;
     font-family: "Baloo",cursive;
     font-size: 14px;
     font-weight: 900;
+    margin: 0px;
      
 }
 
-.col2 {
+.col2-ser {
     display: flex;
     color: white;
     width: 25%;
@@ -93,7 +87,7 @@
     font-weight: 900;
 } 
 
-.col2-1 {
+.col2-1-ser {
     display: flex;
     color: white;
     width: 25%;
@@ -107,7 +101,7 @@
     padding-left: 2%;
 }  
 
-.col3 {
+.col3-ser {
     display: flex;
     color: white;
     width: 25%;
@@ -119,7 +113,7 @@
     font-weight: 900;
 } 
 
-.col3-1 {
+.col3-1-ser {
     display: flex;
     color: white;
     width: 25%;
@@ -132,7 +126,7 @@
     font-weight: 900;
 } 
 
-.col4 {
+.col4-ser {
     display: flex;
     color: white;
     width: 20%;
@@ -144,7 +138,7 @@
     font-weight: 900;
 }
 
-.col4-1 {
+.col4-1-ser {
     display: flex;
     color: white;
     width: 20%;
@@ -157,7 +151,7 @@
     font-weight: 900;
 }    
 
-.col5 {
+.col5-ser {
     display: flex;
     color: white;
     width: 10%;
@@ -169,7 +163,7 @@
     font-weight: 900;
 }
 
-.col5-1 {
+.col5-1-ser {
     display: flex;
     color: white;
     width: 10%;
@@ -183,7 +177,7 @@
 }
 
 
-.col6 {
+.col6-ser {
     display: flex;
     color: white;
     width: 20%;
@@ -195,7 +189,7 @@
     font-weight: 900;
 }
 
-.col6-1 {
+.col6-1-ser {
     display: flex;
     color: white;
     width: 20%;
@@ -210,22 +204,22 @@
 
 
 
-.tag img{
+.tag-ser img{
     border-radius: 20px;
     width: 22px;
     height: 22px;
 }
 
-.lixeira {
+.lixeira-ser {
     
-    width: 30px;
-    height: 30px;
+    width: 19px;
+    height: 22px;
     display: flex;
-    align-items:center;
+    align-items:top;
     justify-content: right;
     position: absolute;
-        top: 90%;
-        left: 90%;
+        top: 10%;
+        left: 92%;
 }
 
 
