--- a/xtreaming-box/src/pages/paginas_Internas/minhaLista/styleMinhaLista.css
+++ b/xtreaming-box/src/pages/paginas_Internas/minhaLista/styleMinhaLista.css
@@ -1,49 +1,55 @@
 
+.text-botoes-minhalista{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 15%;
+}
+
+#esquerda-text-botoes-minhalista{
+    width: 40%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Baloo 2', cursive;
+}
+
 #minha-lista{
     color: #16FC92;
 }
 
 
-.esquerda-itens {
-    width: 15%;
+#direita-text-botoes-minhalista{
+    width: 60%;
     height: 100%;
+    font-family: 'Baloo 2', cursive;
     display: flex;
+    justify-content: center;
     flex-direction: column;
-    align-items: left;
-    background-color: rgba(81, 71, 105, 0.15);
 }
 
-/*Itens da esquerda---------------------------------------------------------------*/
-
-.esquerda-itens > div{
-    width: 100%;
-    height: 5em;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    padding: 1em;
-}
-
-.esquerda-itens > div > a{
+#direita-text-botoes-minhalista > p {
+    font-family: 'Baloo 2', cursive;
     color: #16FC92;
-    font-style: normal;
-    font-weight: 900;
     font-size: 20px;
+    margin: 0;
 }
 
-.desejoassistir {
-    background-color: rgba(81, 71, 105, 0.45);
-    cursor: pointer;
+
+
+.selecao > select{
+    width: 25%;
+    height: 120%;
+    background-color: #514769;
+    color: white;
 }
 
-.visto{
-    cursor: pointer;
-}
 
 /*Itens da direita Vazio DESEJO ASSISTIR---------------------------------------------------------------*/
 
 .direita-itens-vazio-desejo-assistir{
-    width: 85%;
+    width: 99%;
     height: 100%;
     display: none;
     flex-direction: column;
@@ -82,82 +88,25 @@
     background-color: #1ca364;
 }
 
-/*Itens da direita Vazio VISTO---------------------------------------------------------------*/
-
-.direita-itens-vazio-visto{
-    width: 85%;
-    height: 100%;
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.direita-itens-vazio-visto > img{
-    height: 40vh;
-    opacity: 0.3;
-}
-
-.direita-itens-vazio-visto > p {
-    color: #FFFFFF;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 25px;
-}
-
-.direita-itens-vazio-visto > a {
-    height: 35px;
-    padding: 1em 2em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: black;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 25px;
-    background: #16FC92;
-    font-weight: 800;
-    text-decoration: none;
-}
-
-.direita-itens-vazio-visto > a:hover{
-    background-color: #1ca364;
-}
-
 
 /*Itens dentro de Desejo Assistir------------------------------------------------------*/
 
 
 .direita-itens-desejo-assistir{
-    width: 85%;
+    width: 99%;
     height: 100%;
-    display: none;
+    display: flex;
     flex-direction: column;
     align-items: center;
     padding: 1em 0 1em 0;
 }
-
-
-/*Itens dentro de Visto------------------------------------------------------*/
-
-
-.direita-itens-visto{
-    width: 85%;
-    height: 100%;
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    padding: 1em 0 1em 0;
-}
-
-
 
 /*Itens dentro Design dos itens do direita------------------------------------------------------*/
 
 
 .item{
     all: unset;
-    width: 70vw;
+    width: 95%;
     height: 11vh;
     display: flex;
     flex-direction: row;
@@ -201,12 +150,6 @@
     align-items: center;
 }
 
-.lixeira > img{
-    width:  50px;
-    height: 50px;
-    cursor: pointer;
-}
-
 .item > div > p{
     margin: 0;
     color: #FFFFFF;
@@ -218,9 +161,18 @@
 .item > div > .verde{
     color: #16FC92;
     font-size: 14px;
-    
 }
 
+.recomendado{
+    display: flex;
+    height: 40%;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-family: Graduate;
+    color: #FFFFFF;
+    margin: 0;
+}
 
 /**/
 
