--- a/xtreaming-box/src/pages/Administrador/PainelControle/stylePainelcontrole.css
+++ b/xtreaming-box/src/pages/Administrador/PainelControle/stylePainelcontrole.css
@@ -2,13 +2,59 @@
     color: #16FC92;
 }
 
+.caixa-itens-pnl{
+
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    top: 2%;
+    width: 90%;
+    height: 100%;
+    background-color: rgba(31, 27, 44, 0.8);
+    border-radius: 20px;
+    overflow-y: auto;
+}
+
+.setor-a-pnl{
+    top:2%;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+}
+
+.itens-total-pnl{
+    flex-direction: column;
+    display: flex;
+    width: 100%;
+    height: 22%;
+}
+
+
+.bt-for-pnl {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 5%;
+}
 
 .text-botoes{
     width: 100%;
     height: 13vh;
     display: flex;
-    flex-direction: row;
+    
 }
+
+.linha1-pnl{
+    width: auto;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: left;
+    margin-left: 5%;
+}    
 
 .text-botoes > div {
     padding-top: 1%;
@@ -45,20 +91,6 @@
     align-items: center;
 }
 
-.caixa-itens{
-
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    top: 2%;
-    width: 90%;
-    height: 100%;
-    background-color: rgba(31, 27, 44, 0.8);
-    border-radius: 20px;
-    overflow-y: auto;
-    
-}
-
 
     
 
@@ -74,7 +106,7 @@
     font-size: 22px;
     margin: 0%;
     margin-left: 5%; 
-    margin-bottom: 2%; 
+    
 }
 
 .nome-h3 {
@@ -105,9 +137,12 @@
     margin-bottom: 2%;
     
 }
+.form-link{
+    margin-right: 5%;
+}
 
-.bt1 {
-    width: 150px;
+.bt1-pnl {
+    width: 140px;
     height: 41px;
     background: #16FC92;
     font-family: 'Baloo Thambi 2';
@@ -116,8 +151,8 @@
     transition: background-color 0.3s ease;
     color: black;
     font-weight: 900;
-    margin-left: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 7%;
+    margin-right: 7%;
     border-radius: 8px;
 }
 
@@ -143,19 +178,7 @@
     
 
 }
-.text-span {
-    padding-top: 1%;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    font-family: 'Baloo thambi',cursive;
-    color: white;
-    font-size: 16px;
-    margin: 0%;
-    margin-left: 5%; 
-    margin-bottom: 2%;
-    font-style: italic;
-}
+
 
 .linha1{
     display: flex;
@@ -195,13 +218,7 @@
     width: 50%;
     align-items: center;
 }
-.setorb{
-    
-    flex-direction: column;
-    top: 2%;
-    justify-content:baseline;
-    align-items: center;
-}
+
 
 
 .cabec-graf{
@@ -326,23 +343,7 @@
      
 }
 
-.tag img{
-    border-radius: 20px;
-    width: 22px;
-    height: 22px;
-}
 
-.lixeira {
-    
-    width: 30px;
-    height: 30px;
-    display: flex;
-    align-items:center;
-    justify-content: right;
-    position: absolute;
-        top: 90%;
-        left: 90%;
-}        
 
 
 /* Criação de indicadores */
