--- a/xtreaming-box/src/pages/Administrador/Series/UpdateSeries/styleSeries.css
+++ b/xtreaming-box/src/pages/Administrador/Series/UpdateSeries/styleSeries.css
@@ -1,25 +1,49 @@
-#PAINEL-DE-CONTROLE{
-    color: #16FC92;
-    
 
+
+
+
+
+/* area de formatação dos inputs */
+
+
+.entradasdetexto{
+    box-sizing: border-box;
+    width: 30%;
+    height: 5vh;
+    background: #514769;
+    border: 1px solid #16FC92;
+    border-radius: 8px;
+    font-family: 'Baloo Thambi 2';
+    font-size: 16px;
+    color: white;
+    margin-bottom: 10px;
+    
 }
+
+.botao-submit {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+/* css do html*/
 
 
 .text-botoes{
     width: 100%;
-    height: 13vh;
+    height: 10%;
     display: flex;
     flex-direction: row;
 }
 
 .text-botoes > div {
     padding-top: 1%;
-    margin-left: 7%;
-    width: 100%;
+    width: 50%;
     height: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
     font-family: 'Baloo 2', cursive; 
 }
@@ -39,35 +63,23 @@
 
 .conteiner-maior{
     width: 100%;
-    height: 80%;
-    display: flex;
+    height: 90%;
+   
     justify-content: center;
     position: relative;
-    align-items: center;
 }
 
-.caixa-itens{
-
+.caixa-itens-up-ser{
     display: flex;
     flex-direction: row;
-    position: relative;
+    position: absolute;
     top: 2%;
     width: 90%;
-    height: 100%;
+    height: 95%;
     background-color: rgba(31, 27, 44, 0.8);
     border-radius: 20px;
-    overflow-y: auto;
-    
-    
+     
 }
-.format-bt{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin-left: 5%;
-}
-
 /* titulo da caixa */
 .nome-h2 {
     padding-top: 1%;
@@ -77,24 +89,24 @@
     font-family: 'Baloo 2',cursive;
     color: #16FC92;
     font-weight: 600;
-    font-size: 22px;
+    font-size: 24px;
     margin: 0%;
     margin-left: 5%; 
-    margin-bottom: 2%; 
+    margin-bottom: 10px; 
 }
 
 .nome-h3 {
     padding-top: 1%;
     display: flex;
-    justify-content: center;
-        align-items: center;
+    justify-content: left;
+    align-items: center;
     font-family: 'Baloo 2',cursive;
     color: #16FC92;
     font-weight: 600;
-    font-size: 22px;
+    font-size: 24px;
     margin: 0%;
-    margin-left: 5%; 
-    margin-bottom: 2%; 
+    margin-left: 50%; 
+    margin-bottom: 10px; 
 }
 /* area de formatação dos inputs */
 
@@ -109,33 +121,38 @@
     font-size: 16px;
     color: white;
     margin-bottom: 10px;
-    
-}
-
-.bt-voltar {
-    width: 160px;
-    height: 5vh;
-    background: #16FC92;
-    font-family: 'Baloo Thambi 2';
-    font-size: 16px ;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    color: black;
-    font-weight: 900;
     margin-left: 5%;
-    border-radius: 8px;
 }
 
-::placeholder {
-    color: #FFFFFF;
+.input-box > select{
+    box-sizing: border-box;
+    width: 337px;
+    height: 5vh;
+    background: #514769;
+    border: 1px solid #16FC92;
+    border-radius: 8px;
+    font-family: 'Baloo Thambi 2';
     font-size: 13px;
-    text-align: left;
-    
+    color: white;
+    margin-bottom: 10px;
+    margin-left: 5%;
 }
 
+.input-box > textarea{
+    box-sizing: border-box;
+    width: 337px;
+    height: 80px;
+    background: #514769;
+    border: 1px solid #16FC92;
+    border-radius: 8px;
+    font-family: 'Baloo Thambi 2';
+    font-size: 13px;
+    color: white;
+    margin-left: 5%;
+}
 
-.bt1-plat{
-    width: 160px;
+.bt1 {
+    width: 120px;
     height: 5vh;
     background: #16FC92;
     font-family: 'Baloo Thambi 2';
@@ -145,13 +162,15 @@
     color: black;
     font-weight: 900;
     margin-left: 5%;
+    margin-right: 50px;
+    margin-bottom: 3%;
+    margin-top: 2%;
     border-radius: 8px;
     
-
 }
 
-.bt-excluir {
-    width: 160px;
+.bt2 {
+    width: 120px;
     height: 5vh;
     background: red;
     font-family: 'Baloo Thambi 2';
@@ -160,12 +179,12 @@
     transition: background-color 0.3s ease;
     color: white;
     font-weight: 900;
-    margin-left: 5%;
+    margin-left: 4%;
     border-radius: 8px;
+    
 }
 
 .text-span {
-    padding-top: 1%;
     display: flex;
     justify-content: left;
     align-items: center;
@@ -173,20 +192,9 @@
     color: white;
     font-size: 16px;
     margin: 0%;
-    margin-left: 5%; 
-    margin-bottom: 2%;
+    margin-left: 9%; 
     font-style: italic;
 }
-
-.linha1-plat{
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: left;
-    
-    
-}
-
 
 ::placeholder {
     color: #FFFFFF;
@@ -235,9 +243,11 @@
     border: 1px solid  #16FC92;
     border-start-start-radius: 20px;
     
+    
 }
 
 .corpo-graf{
+    
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -247,7 +257,7 @@
 .col1 {
     display: flex;
     color: white;
-    width: 25%;
+    width: 10%;
     border: 1px solid  #16FC92;
     align-items: center;
     justify-content: center;
@@ -260,7 +270,7 @@
 .col1-1 {
     display: flex;
     color: white;
-    width: 25%;
+    width: 10%;
     height: 25px;
     border: 1px solid  #16FC92;
     align-items: center;
@@ -274,7 +284,7 @@
 .col2 {
     display: flex;
     color: white;
-    width: 50%;
+    width: 25%;
     border: 1px solid  #16FC92;
     align-items: center;
     justify-content: center;
@@ -286,7 +296,7 @@
 .col2-1 {
     display: flex;
     color: white;
-    width: 50%;
+    width: 25%;
      height: 25px;
     border: 1px solid  #16FC92;
     align-items: center;
@@ -320,7 +330,85 @@
     font-family: "Baloo",cursive;
     font-size: 14px;
     font-weight: 900;
-}  
+} 
+
+.col4 {
+    display: flex;
+    color: white;
+    width: 20%;
+    border: 1px solid  #16FC92;
+    align-items: center;
+    justify-content: center;
+    font-family: "Baloo",cursive;
+    font-size: 14px;
+    font-weight: 900;
+}
+
+.col4-1 {
+    display: flex;
+    color: white;
+    width: 20%;
+    height: 25px;
+    border: 1px solid  #16FC92;
+    align-items: center;
+    justify-content: center;
+    font-family: "Baloo",cursive;
+    font-size: 14px;
+    font-weight: 900;
+}    
+
+.col5 {
+    display: flex;
+    color: white;
+    width: 10%;
+    border: 1px solid  #16FC92;
+    align-items: center;
+    justify-content: center;
+    font-family: "Baloo",cursive;
+    font-size: 14px;
+    font-weight: 900;
+}
+
+.col5-1 {
+    display: flex;
+    color: white;
+    width: 10%;
+    height: 25px;
+    border: 1px solid  #16FC92;
+    align-items: center;
+    justify-content: center;
+    font-family: "Baloo",cursive;
+    font-size: 14px;
+    font-weight: 900;
+}
+
+
+.col6 {
+    display: flex;
+    color: white;
+    width: 20%;
+    border: 1px solid  #16FC92;
+    align-items: center;
+    justify-content: center;
+    font-family: "Baloo",cursive;
+    font-size: 14px;
+    font-weight: 900;
+}
+
+.col6-1 {
+    display: flex;
+    color: white;
+    width: 20%;
+    height: 25px;
+    border: 1px solid  #16FC92;
+    align-items: center;
+    justify-content: center;
+    font-family: "Baloo",cursive;
+    font-size: 14px;
+    font-weight: 900;
+}
+
+
 
 .tag img{
     border-radius: 20px;
@@ -339,3 +427,5 @@
         top: 90%;
         left: 90%;
 }
+
+
