--- a/xtreaming-box/src/pages/Administrador/PainelControle/stylePainelcontrole.css
+++ b/xtreaming-box/src/pages/Administrador/PainelControle/stylePainelcontrole.css
@@ -82,7 +82,7 @@
 
 /*Aqui comeca o conteudo que vai englobar os itens*/
 
-.conteiner-maior{
+.conteiner-maior-adm{
     width: 100%;
     height: 80%;
     display: flex;
