--- a/xtreaming-box/src/pages/Administrador/Series/CadastrarSeries/styleSeries.css
+++ b/xtreaming-box/src/pages/Administrador/Series/CadastrarSeries/styleSeries.css
@@ -61,7 +61,7 @@
 
 /*Aqui comeca o conteudo que vai englobar os itens*/
 
-.conteiner-maior{
+.conteiner-maior-adm{
     width: 100%;
     height: 90%;
    
@@ -69,7 +69,7 @@
     position: relative;
 }
 
-.caixa-itens{
+.caixa-itens-adm{
     display: flex;
     flex-direction: row;
     position: absolute;
