--- a/xtreaming-box/src/pages/Administrador/Series/UpdateSeries/styleSeries.css
+++ b/xtreaming-box/src/pages/Administrador/Series/UpdateSeries/styleSeries.css
@@ -61,7 +61,7 @@
 
 /*Aqui comeca o conteudo que vai englobar os itens*/
 
-.conteiner-maior{
+.conteiner-maior-adm{
     width: 100%;
     height: 90%;
    
