stylo do recomendado

--- a/xtreaming-box/src/pages/paginas_Internas/minhaLista/styleMinhaLista.css
+++ b/xtreaming-box/src/pages/paginas_Internas/minhaLista/styleMinhaLista.css
@@ -179,6 +179,9 @@
 .checkbox{
     display: flex;
     flex-direction: column;
+    color: #FFFFFF;
+    font-family: Graduate;
+    font-size: small;
 }
 /**/
 
