--- a/xtreaming-box/src/pages/paginas_Internas/editarPerfil/EditarPerfilMobile.css
+++ b/xtreaming-box/src/pages/paginas_Internas/editarPerfil/EditarPerfilMobile.css
@@ -13,17 +13,17 @@
     
     #caixa-itens-editarperfil{
         display: flex;
+        flex-direction:column ;
     }
 
     
 
     .bt1submit {
-        width: 40%;
+        width: 160px;
+        height: 3vh;
         
         
     }
 
-    .entradasdetexto {
-        width: 80%;
-    }
+    
 }
