--- a/xtreaming-box/src/pages/paginas_Internas/meuPerfil/styleMeuPerfilMobile.css
+++ b/xtreaming-box/src/pages/paginas_Internas/meuPerfil/styleMeuPerfilMobile.css
@@ -25,8 +25,10 @@
     }
     
     .bt1Editar, .bt2Encerrar {
-        width: 30%;
+        width: 160px;
+        height: 3vh;
         margin-left: 2px;
+        margin-right: 5%;
         font-size: 12px;
     }
 }
