--- a/xtreaming-box/src/pages/Administrador/Caixa de Mensagem/styleplataforma.css
+++ b/xtreaming-box/src/pages/Administrador/Caixa de Mensagem/styleplataforma.css
@@ -3,19 +3,27 @@
     
 
 }
-.caixa-msg{
+.caixa-msg-contato{
     display: flex;
     flex-direction: column;
-    
-    top: 2%;
-    width: 100%;
-    height: 45vh;
-    background-color: white;
+    width: 90%;
+    height: 60%;
     border-radius: 20px;
     overflow-y: auto;
-    background-color: hsla(0, 24%, 15%, 0.61);
+    background-color: hsla(279, 16%, 37%, 0.61);
     margin-left: 5%;
+    margin-top: 2%;
     margin-bottom: 2%;
+}
+
+.caixa-msg-contato > section {
+    display: flex;
+    flex-direction: row;
+}
+
+.caixa-msg-contato > section > p{
+    margin-left: 5%;
+    color: #FFFFFF;
 }
 
 .text-botoes{
@@ -60,7 +68,6 @@
 }
 
 .caixa-itens-adm{
-
     display: flex;
     flex-direction: row;
     position: relative;
@@ -70,15 +77,26 @@
     background-color: rgba(31, 27, 44, 0.8);
     border-radius: 20px;
     overflow-y: auto;
-    
-    
 }
-.format-bt{
+
+.caixa-itens-adm > div{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.input-box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.format-bt-contato{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-left: 5%;
+    
 }
 
 /* titulo da caixa */
@@ -173,7 +191,6 @@
     transition: background-color 0.3s ease;
     color: white;
     font-weight: 900;
-    margin-left: 5%;
     border-radius: 8px;
 }
 
@@ -194,9 +211,10 @@
 .linha1-plat{
     display: flex;
     align-items: center;
-    flex-direction: row;
-    justify-content: left;
     
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
     
 }
 
