--- a/xtreaming-box/src/pages/Administrador/Plataforma/CadastrarPlataforma/styleplataforma.css
+++ b/xtreaming-box/src/pages/Administrador/Plataforma/CadastrarPlataforma/styleplataforma.css
@@ -60,12 +60,12 @@
     
     
 }
-.format-bt{
+.format-bt-cad-pla{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-    margin-left: 5%;
+    justify-content: left;
+    
 }
 
 /* titulo da caixa */
@@ -98,7 +98,7 @@
 }
 /* area de formatação dos inputs */
 
-.input-box > input{
+.input-box-cad-pla > input{
     box-sizing: border-box;
     width: 337px;
     height: 5vh;
@@ -109,6 +109,7 @@
     font-size: 16px;
     color: white;
     margin-bottom: 10px;
+    margin-left: 5%;
     
 }
 
@@ -134,7 +135,7 @@
 }
 
 
-.bt1-plat{
+.bt1-cad-plat{
     width: 160px;
     height: 5vh;
     background: #16FC92;
@@ -144,7 +145,7 @@
     transition: background-color 0.3s ease;
     color: black;
     font-weight: 900;
-    margin-left: 5%;
+    margin-left: 6%;
     border-radius: 8px;
     
 
